<resources>
    <string name="app_name">SmartRoom Remote</string>
    <string name="temperatura_in_vlaga">Temperatura in vlaga</string>
    <string name="_24_c">null</string>
    <string name="_48">null</string>
    <string name="stropna_lu">Stropna luč</string>
    <string name="intruder_mode">intruder mode</string>
    <string name="party_mode">party mode</string>
    <string name="dogodki">Dogodki</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>